# RetailBot

./: .env.example  .gitignore  README.md  pyproject.toml  replit.md
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  auth_simple.py  auth_working.py  chat.py  debug.py  health.py  ingest.py  vector_viewer.py
app/core/: __init__.py  arabic_extractor.py  arabic_snippets.py  auth.py  auth_service.py  auth_working.py  chunker.py  db.py  document_processor.py  llm.py  logging.py  middleware.py  models.py  pdf.py  rag.py  settings.py
app/ui/: index.html
app/ui/static/: app.js  styles.css
db_script/: backfill_tenants.py  migration_001_multi_tenant.sql  migration_001_revert.sql  sql
tests/: __init__.py  examples.yaml  test_ingest.py  test_refusal.py  test_retrieval.py
