[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "asyncpg>=0.30.0",
    "docx2python>=3.5.0",
    "fastapi>=0.116.1",
    "langdetect>=1.0.9",
    "mammoth>=1.10.0",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-bidi>=0.6.6",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "regex>=2025.7.34",
    "structlog>=25.4.0",
    "tiktoken>=0.11.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "wsproto>=1.2.0",
]
